[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menus/MenusInGame/Gui/Gui.gd" type="Script" id=1]
[ext_resource path="res://Menus/Buttons-Icons.png" type="Texture" id=2]
[ext_resource path="res://Menus/MenusInGame/GuiPlayer.png" type="Texture" id=3]
[ext_resource path="res://Game/Bullet/Magic.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 300, 100, 100 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.886275, 0.0901961, 0.372549, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.2, 0.694118, 0.901961, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_random = 0.3

[node name="Gui" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PauseButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -90.0
margin_top = 15.0
margin_right = 10.0
margin_bottom = 115.0
rect_min_size = Vector2( 75, 75 )
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = SubResource( 1 )
texture_hover = SubResource( 2 )

[node name="GuiPlayer" type="TextureRect" parent="."]
margin_right = 660.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 142 )
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="LifeBar" type="ProgressBar" parent="GuiPlayer"]
margin_left = 145.0
margin_top = 65.0
margin_right = 640.0
margin_bottom = 100.0
rect_min_size = Vector2( 500, 35 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false

[node name="PowerBar" type="ProgressBar" parent="GuiPlayer"]
margin_left = 145.0
margin_top = 100.0
margin_right = 495.0
margin_bottom = 125.0
rect_min_size = Vector2( 400, 25 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_value = 1.0
percent_visible = false

[node name="Particles2D" type="Particles2D" parent="GuiPlayer"]
position = Vector2( 85, 95 )
scale = Vector2( 1.33333, 1.33333 )
emitting = false
one_shot = true
explosiveness = 1.0
process_material = SubResource( 7 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="visibility_changed" from="." to="." method="_on_Gui_visibility_changed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
